--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
         </div>
         <div class="action-buttons-column">
             <span class="action-hint-arrow"></span>
-            <button class="action-button" data-mode="highlights">Extract Highlights</button>
+            <button class="action-button" data-mode="highlight">Extract Highlights</button>
         </div>
         <div class="action-buttons-column">
             <span class="action-hint-arrow"></span>
