--- a/index.html
+++ b/index.html
@@ -1038,21 +1038,16 @@
 
             console.log("Backend Raw Response Data:", rawData); // Log the full raw response for debugging
 
-            // IMPORTANT: Adjust to handle the array wrapper and capitalized keys from n8n
-            let data = {};
-            if (Array.isArray(rawData) && rawData.length > 0) {
-                data = rawData[0]; // Get the first object from the array
-                // Map capitalized keys to expected frontend camelCase/lowercase
-                data.sessionId = data["Session ID"];
-                data.filename = data["Filename"];
-                data.summary = data["Summary"];
-                data.highlights = data["Highlights"];
-                data.mcqs = data["MCQs"];
-            } else {
-                // If it's not an array, assume it's already the direct object (less common now)
-                data = rawData;
-            }
-
+            // IMPORTANT: Process the data received from n8n
+            let data = rawData; // Assuming rawData is now directly the object, not an array
+            
+            // Map capitalized keys to expected frontend camelCase/lowercase
+            data.sessionId = data["Session ID"]; // Access with space
+            data.filename = data["Filename"];
+            data.summary = data["Summary"];
+            data.highlights = data["Highlights"];
+            data.mcqs = data["MCQs"];
+            
             console.log("Frontend Processed Data:", data); // Log the processed data
 
             loadingIndicator.classList.remove('visible');
